# es_orm

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/es_orm/: __init__.py  exceptions.py  fields.py  utils.py
tests/: __init__.py  test_base_field.py  test_db_interaction.py  test_dict_field.py  test_document.py  test_document_old.py  test_fields.py  test_mapping.py
