[metadata]

name = es_orm
version = 0.4.11.5
author = Mikhail Tsarev
author_email = mtsarev06@gmail.com
description = ORM for elasticsearch which serves as a layer between an app and DB.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mtsarev06/es_orm
project_urls =
    Bug Tracker = https://github.com/mtsarev06/es_orm/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires=
    elasticsearch-dsl ==7.3.0

[options.packages.find]
where = src
